--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
 MONGODB_URI=your_mongodb_uri_here
+
+
+# AWS Credentials, please get IAM, don't use root credentials
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_REGION=us-east-1
+BEDROCK_MODEL_ID=anthropic.claude-v2
+
